// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders error toast 1`] = `
Object {
  "icon": <Icon
    size={20}
    src={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "propTypes": Object {
          "color": [Function],
          "size": [Function],
        },
        "render": [Function],
      }
    }
  />,
  "message": "Oh noes! Something went wrong.",
}
`;

exports[`renders login toast 1`] = `
Object {
  "icon": <Icon
    size={20}
    src={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "propTypes": Object {
          "color": [Function],
          "size": [Function],
        },
        "render": [Function],
      }
    }
  />,
  "message": "You must login to proceed!",
}
`;

exports[`renders success toast 1`] = `
Object {
  "icon": <Icon
    size={20}
    src={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "propTypes": Object {
          "color": [Function],
          "size": [Function],
        },
        "render": [Function],
      }
    }
  />,
  "message": "Added to favorites list!",
}
`;
